updated dev portfolio page to include Acopon project and updated Alt tags

--- a/views/development.ejs
+++ b/views/development.ejs
@@ -18,7 +18,24 @@
 
                     <div class="container py-5 text-center" data-aos="fade-up">
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/apply-or-die.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/acopon.png" class="card-img-top"
+                                alt="Screenshot of Acopon Brewing Co. Website">
+                            <div class="card-body">
+                                <p class="card-text">Acopon Brewing Co.
+                                </p>
+                                <h5 class="card-title">Landing page Micro Brewery outside of Austin, Tx.</h5>
+                                <div class="viewMoreDiv">
+                                    <a href="https://acoponbrewing.com/" target="new"><button
+                                            class="btn text-light BtnStyles">View
+                                            Live</button></a>
+                                    <a href="https://github.com/RojoRevolution/acopon" target="new"><button
+                                            class="btn text-light BtnStyles">View on GitHub</button></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-overwrite" data-aos="fade-up">
+                            <img src=" /assets/images/home/dev/apply-or-die.png" class="card-img-top"
+                                alt="Screenshot of Apply or Die Project">
                             <div class="card-body">
                                 <p class="card-text">Apply or Die
                                 </p>
@@ -34,7 +51,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/yay-or-nay.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/yay-or-nay.png" class="card-img-top"
+                                alt="Screenshot of Yay or Nay Project">
                             <div class="card-body">
                                 <p class="card-text">Yay or Nay</p>
                                 <h5 class="card-title">An exercise in authentication and relational
@@ -50,7 +68,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/eat-da-burger.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/eat-da-burger.png" class="card-img-top"
+                                alt="Screenshot of Eat da Burger Project">
                             <div class="card-body">
                                 <p class="card-text">Eat-Da-Burger
                                 </p>
@@ -67,7 +86,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/gdfab.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/gdfab.png" class="card-img-top"
+                                alt="Screenshot of Good Day for a Beer Project">
                             <div class="card-body">
                                 <p class="card-text">Good Day For A Beer Project
 
@@ -84,7 +104,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/daily_planner.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/daily_planner.png" class="card-img-top"
+                                alt="Screenshot of Workdat Scheduler">
                             <div class="card-body">
                                 <p class="card-text">Daily Planner App
                                 </p>
@@ -103,7 +124,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/weather-dash.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/weather-dash.png" class="card-img-top"
+                                alt="Screenshot of Weather & Forcast Web App">
                             <div class="card-body">
                                 <p class="card-text">Weather & Forcast Web App
                                 </p>
@@ -119,7 +141,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/dev/code-quiz.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/dev/code-quiz.png" class="card-img-top"
+                                alt="Screenshot of Dynamic Quiz Project">
                             <div class="card-body">
                                 <p class="card-text">Dynamic Quiz
                                 </p>
