--- a/views/design.ejs
+++ b/views/design.ejs
@@ -20,7 +20,8 @@
                     </div>
                     <div class="container py-5 text-center" data-aos="fade-up">
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src="/assets/images/home/001_azw.png" class="card-img-top" alt="...">
+                            <img src="/assets/images/home/001_azw.png" class="card-img-top"
+                                alt="Cover image of AZ Wilderness Brewing Co. Project">
                             <div class="card-body">
                                 <p class="card-text">Branding / Print Design</p>
                                 <h5 class="card-title">Establishing one of the first breweries to break the mold in
@@ -33,9 +34,10 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src="/assets/images/home/002_hideout.png" class="card-img-top" alt="...">
+                            <img src="/assets/images/home/002_hideout.png" class="card-img-top"
+                                alt="Cover image of Hideout.tv Project">
                             <div class="card-body">
-                                <p class="card-text">Platform / Product Design
+                                <p class="card-text">Product Design
                                 </p>
                                 <h5 class="card-title">Launching An Industry First Rewarded Video Platform</h5>
                                 <div class="viewMoreDiv">
@@ -45,9 +47,10 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src="/assets/images/home/003_adscend.png" class="card-img-top" alt="...">
+                            <img src="/assets/images/home/003_adscend.png" class="card-img-top"
+                                alt="Cover image of Logo Projects for AZ Wilderness Brewin Co.">
                             <div class="card-body">
-                                <p class="card-text">Platform / Product Design
+                                <p class="card-text">UI Design
                                 </p>
                                 <h5 class="card-title">Redesigning the Client Experience + Launching A New Monetization
                                     Product
@@ -59,7 +62,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src="/assets/images/home/004_azw.png" class="card-img-top" alt="...">
+                            <img src="/assets/images/home/004_azw.png" class="card-img-top"
+                                alt="Cover image of Logo Projects for AZ Wilderness Brewin Co.">
                             <div class="card-body">
                                 <p class="card-text">Idendity / Logo Design
                                 </p>
@@ -72,7 +76,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/005_azw.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/005_azw.png" class="card-img-top"
+                                alt="Cover image of illustration / labels for AZ Wilderness Brewing Co.">
                             <div class="card-body">
                                 <p class="card-text">Illustration & Print Design
                                 </p>
@@ -85,7 +90,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/006_adscend.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/006_adscend.png" class="card-img-top"
+                                alt="Cover image of Adscend Media Branding and Web Design">
                             <div class="card-body">
                                 <p class="card-text">Branding & Web Design
                                 </p>
@@ -98,7 +104,8 @@
                             </div>
                         </div>
                         <div class="card card-overwrite" data-aos="fade-up">
-                            <img src=" /assets/images/home/007_acopon.png" class="card-img-top" alt="...">
+                            <img src=" /assets/images/home/007_acopon.png" class="card-img-top"
+                                alt="Cover image for Acopon Brewing Co. Branding Project">
                             <div class="card-body">
                                 <p class="card-text">Branding & Print Design
                                 </p>
