small about page updates

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -85,7 +85,13 @@
                             <div class="col-md-8">
                                 <ul id="designSkills">
                                     <li data-aos="fade-up">
-                                        <h3>Freelance Art Director, Designer, Developer | Jan 2009 - Present</h3>
+                                        <h3>Web Designer | Apr 2021 - Present</h3>
+                                        <p>Bevy | Remote</p>
+                                    </li>
+                                    <li data-aos="fade-up">
+                                        <h3>Freelance Art Director, Illustrator, Designer, Developer | Jan 2009 -
+                                            Present
+                                        </h3>
                                         <p>RojoRevolution | Remote / Austin, TX.</p>
                                     </li>
                                     <li data-aos="fade-up">
