--- a/views/partials/dev-portfolio.ejs
+++ b/views/partials/dev-portfolio.ejs
@@ -6,7 +6,7 @@
         <div class="card-body">
             <p class="card-text">Acopon Brewing Co.
             </p>
-            <h5 class="card-title">Landing page Micro Brewery outside of Austin, Tx.</h5>
+            <h5 class="card-title">Landing page for a Micro Brewery just outside of Austin, Tx.</h5>
             <div class="viewMoreDiv">
                 <a href="https://acoponbrewing.com/" target="new"><button class="btn text-light BtnStyles">View
                         Live</button></a>
