--- a/views/acopon.ejs
+++ b/views/acopon.ejs
@@ -17,7 +17,21 @@
                         <div>
                             <div class="img-large">
                                 <img class="img-size my-1" src="/assets/images/interior/acopon/001_AcoponBrewingCo.png"
-                                    alt="Adscend Media Homepage" data-aos="fade-up">
+                                    alt="Acopon Brewing Co. Brand Identity" data-aos="fade-up">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <img src="/assets/images/interior/acopon/002_Acopon_2Color.png"
+                                    alt="Acopon Brewing Co. 2 Color Identity" class="img-size" data-aos="fade-up">
+                            </div>
+                            <div class="col">
+                                <img src="/assets/images/interior/acopon/003_Acopon_1Color.png"
+                                    alt="Acopon Brewing Co. 1 Color Identity" class="img-size" data-aos="fade-up">
+                            </div>
+                            <div class="col">
+                                <img src="/assets/images/interior/acopon/004_Acopon_Inverse.png"
+                                    alt="Acopon Brewing Co. Inversed Identity" class="img-size" data-aos="fade-up">
                             </div>
                         </div>
                     </div>
@@ -69,31 +83,62 @@
                                     pint of Acopon Brewing Co. beer may restore your spirit, though it's not advocated
                                     to
                                     actually be healthy for you, especially in excess.</p>
+
+                                <p>Apart from the over arching brand identity, which has received countless amounts of
+                                    love and
+                                    admiration from visiting patrons, the founders of Acopon Brewing Company have done
+                                    well to
+                                    continue with the theme of English and European texts, stories, and legends. With
+                                    beer names
+                                    such as Gas Pipes, named after the old street light systems used before electricity;
+                                    to beer
+                                    names such as Mina Pale Ale and Renfield IPA inspired by the characters from Bram
+                                    Stoker's
+                                    Dracula.<br><br>
+
+                                    The brewery itself is very small, so packaged beer is not really a thing, and
+                                    project are
+                                    few
+                                    and far between. Though they have seen great success based on their theme and
+                                    identity,
+                                    especially in the realm of merchandise.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <!-- Society -->
+                <!-- Colors and Patterns -->
                 <section class="container-flex">
-                    <div class="container px-5 content-max">
-                        <div class="container text-center">
-                            <div class="img-large">
-                                <img class="img-size my-1" src="/assets/images/interior/acopon/005_AcoponSociety.png"
-                                    alt="Adscend Media Homepage" data-aos="fade-up">
-                            </div>
+                    <h2 class="text-center" data-aos="fade-up">Color Scheme</h2>
+                    <div class="row" data-aos="fade-up">
+                        <div class="col color-scheme acopon1">
+                            #3D4055
                         </div>
-                        <p>Apart from the over arching brand identity, which has received countless amounts of love and
-                            admiration from visiting patrons, the founders of Acopon Brewing Company have done well to
-                            continue with the theme of English and European texts, stories, and legends. With beer names
-                            such as Gas Pipes, named after the old street light systems used before electricity; to beer
-                            names such as Mina Pale Ale and Renfield IPA inspired by the characters from Bram Stoker's
-                            Dracula.<br><br>
-
-                            The brewery itself is very small, so packaged beer is not really a thing, and project are
-                            few
-                            and far between. Though they have seen great success based on their theme and identity,
-                            especially in the realm of merchandise.</p>
+                        <div class="col color-scheme acopon2">
+                            #6AA284
+                        </div>
+                        <div class="col color-scheme acopon3">
+                            #9A9B9C
+                        </div>
+                        <div class="col color-scheme acopon4">
+                            #F5EBE3
+                        </div>
+                        <div class="col color-scheme acopon5">
+                            #E8D9B4
+                        </div>
                     </div>
+                    <!-- Patterns -->
+                    <h2 class="text-center mt-5" data-aos="fade-up">Patterns</h2>
+                    <div class="row acopon-pattern-dark" data-aos="fade-up">
+                    </div>
+                </section>
+                <section>
+                    <div class="container-flex crowler-content">
+                        <div class="container">
+                            <img src="/assets/images/interior/acopon/crowlers.png" class="crowler-img"
+                                alt="16oz Crowler Can Design" data-aos="fade-up" />
+                            <h2 class="text-center">16oz Crowler Designs</h2>
+                            <p class="text-center">Digital print, directly on can</p>
+                        </div>
                 </section>
                 <!-- Beer Logos -->
                 <!-- ADD Cask HERO -->
@@ -120,18 +165,82 @@
                         </div>
                     </div>
                 </section>
-                <!-- CREATE HERO FOR HANS TRAPP -->
-                <!-- <section class="container-flex">
-                <div class="container">
-                    <h1>Hans Trapp</h1>
-                </div>
-            </section> -->
+                <!--HANS TRAPP -->
+                <section>
+                    <div class="container-flex hans">
+                        <div class="container">
+                            <img src="/assets/images/interior/acopon/hans_hero.png" class="hans-hero"
+                                alt="Hans Trap Barrel Aged Imperial Stout" data-aos="fade-up">
+                        </div>
+                    </div>
+                    <div class="container-flex">
+                        <div class="container">
+                            <h2 class="text-center pt-5 pb-3">Winter Seasonal Release</h2>
+                            <p>
+                                Hans Trapp was a wealthy but cruel man in the 1400’s, who was excommunicated from
+                                the
+                                church for practicing dark magic. Whereas St Nicholas would bring presents to the
+                                good
+                                children, Hans Trapp would punish the naughty children by beating them with sticks.
+                                To
+                                this day, parents use the threat of Hans Trapp to try and make children behave.
+                                <br>
+                                <br>
+                                This identity was created for the breweries yearly Barrel Aged Imperial Stout, which
+                                is
+                                typically released right around the holiday season. Though Acopon does not
+                                traditionally
+                                package their beers, a custom label was designed and printed for Crowler fills of
+                                Hans
+                                Trapp.
+                            </p>
+                            <h2 class="text-center pt-5 pb-3">Identity Design</h2>
+                            <div class="row">
+                                <div class="col">
+                                    <img src="/assets/images/interior/acopon/HansTrapp_1Color@2x.png"
+                                        alt="Hans Trapp identity design, 1 color" class="img-size" data-aos="fade-up" />
+                                </div>
+                                <div class="col">
+                                    <img src="/assets/images/interior/acopon/HansTrapp_1Color_INVERSE@2x.png"
+                                        alt="Hans Trapp identity design, 1 color" class="img-size" data-aos="fade-up" />
+                                </div>
+                            </div>
+                            <h2 class="text-center  pt-5 pb-3">16oz Can Label Design</h2>
+                            <div class="row justify-content-center">
+                                <img src="/assets/images/interior/acopon/hans_label.png"
+                                    alt="Hans Trapp 16oz can label design" class="hans-label" data-aos="fade-up" />
+                            </div>
+                            <h2 class="text-center  pt-5 pb-3">Merch</h2>
+                            <div class="row">
+                                <div class="col-6">
+                                    <img src="/assets/images/interior/acopon/HansTrapp_red_Front@2x.png"
+                                        class="img-size" alt="Hans Trapp white on red holiday shirt design front"
+                                        data-aos="fade-up" />
+                                </div>
+                                <div class="col-6">
+                                    <img src="/assets/images/interior/acopon/HansTrapp_red_Back@2x.png" class="img-size"
+                                        alt="Hans Trapp white on red holiday shirt design back" data-aos="fade-up" />
+                                </div>
+                                <div class="col-6">
+                                    <img src="/assets/images/interior/acopon/HansTrapp_black_Front@2x.png"
+                                        class="img-size" alt="Hans Trapp red on black shirt design front"
+                                        data-aos="fade-up" />
+                                </div>
+                                <div class="col-6">
+                                    <img src="/assets/images/interior/acopon/HansTrapp_black_Back@2x.png"
+                                        class="img-size" alt="Hans Trapp red on black shirt design back"
+                                        data-aos="fade-up" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <!-- CREATE HERO Rat King -->
-                <!-- <section class="container-flex">
-                <div class="container">
-                    <h1>Rat King</h1>
-                </div>
-            </section> -->
+                <!-- <section class=" container-flex">
+                                <div class="container">
+                                    <h1>Rat King</h1>
+                                </div>
+                </section> -->
                 <!-- MERCH -->
                 <section class="container-flex padding-y-100">
                     <div class="container text-center">
